syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesplatform.transaction.protobuf";
option csharp_namespace = "WavesEnterprise";

import "google/protobuf/wrappers.proto";

message AtomicBadge {
    google.protobuf.BytesValue trusted_sender = 1;
}
